# openweather

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: right_now.rs
src/: lib.rs  location.rs  parameters.rs  weather_types.rs
