[package]
name = "openweather"
version = "0.0.1"
authors = ["Broderick Carlin <broderick.carlin@gmail.com>"]
description = "A rust crate wrapping openweather's API into a simple easy to use interface"
repository = "https://github.com/BroderickCarlin/openweather"
readme = "README.md"
keywords = ["openweather", "openweathermaps", "weather", "api"]
categories = ["api-bindings", "science"]
license = "MIT"
license-file = "LICENSE-MIT"

[lib]
name = "openweather"
path = "src/lib.rs"

[dependencies]
reqwest = "0.9"
serde_json = "1.0"
serde = "1.0.101"
serde_derive = "1.0.101"
time = "0.1.42"
url = "2.1.0"
