[package]
name = "openweather"
version = "0.1.0"
authors = ["Broderick Carlin <broderick.carlin@gmail.com>"]
description = "A rust crate wrapping openweather's API into a simple easy to use interface"
repository = "https://github.com/BroderickCarlin/openweather"
readme = "README.md"
keywords = ["openweather", "openweathermaps", "weather", "api"]
categories = ["api-bindings", "science"]
license = "MIT"
license-file = "LICENSE-MIT"
edition = "2018"

[lib]
name = "openweather"
path = "src/lib.rs"

[dependencies]
log = "0.4.8"

http_req = {version = "0.5.3", default-features = false, features = ["rust-tls"]}

serde_json = "1.0"
serde = "1.0.101"
serde_derive = "1.0.101"

time = "0.1.42"
url = "2.1.0"
thiserror = "1.0.13"


[dev-dependencies]
dotenv = "0.15.0"
